// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> Should match snapshot With number 1`] = `
.Badge-module__wrapper___Owq-B {
  display: inline-block;
  margin-left: var(--qtm-spacing-xsmall);
  margin-right: var(--qtm-spacing-xsmall);
}

.Badge-module__badge___vNFzU {
  align-items: center;
  border-radius: 8px;
  box-sizing: border-box;
  display: flex;
  font-size: calc(var(--qtm-base-font-size)*.75);
  font-weight: 700;
  height: 24px;
  justify-content: center;
  line-height: 24px;
  min-width: 32px;
  padding-left: var(--qtm-spacing-xxxsmall);
  padding-right: var(--qtm-spacing-xxxsmall);
}

.Badge-module__badge-skin-neutral___J8kXp {
  background-color: var(--qtm-colors-neutral-100);
  color: var(--qtm-colors-neutral-700);
}

<div
  class="Badge-module__wrapper___Owq-B"
>
  <span
    class="Badge-module__badge___vNFzU Badge-module__badge-skin-neutral___J8kXp"
  >
    10
  </span>
</div>
`;

exports[`<Badge /> Should match snapshot it should contain dot style 1`] = `
.Badge-module__wrapper___Owq-B {
  display: inline-block;
  margin-left: var(--qtm-spacing-xsmall);
  margin-right: var(--qtm-spacing-xsmall);
}

.Badge-module__badge___vNFzU {
  align-items: center;
  border-radius: 8px;
  box-sizing: border-box;
  display: flex;
  font-size: calc(var(--qtm-base-font-size)*.75);
  font-weight: 700;
  height: 24px;
  justify-content: center;
  line-height: 24px;
  min-width: 32px;
  padding-left: var(--qtm-spacing-xxxsmall);
  padding-right: var(--qtm-spacing-xxxsmall);
}

.Badge-module__badge-dot___h5kxC {
  height: 12px;
  min-width: 12px;
  right: -2px;
  top: 0;
  width: 12px;
}

.Badge-module__badge-skin-neutral___J8kXp {
  background-color: var(--qtm-colors-neutral-100);
  color: var(--qtm-colors-neutral-700);
}

<div
  class="Badge-module__wrapper___Owq-B"
>
  <span
    class="Badge-module__badge___vNFzU Badge-module__badge-skin-neutral___J8kXp Badge-module__badge-dot___h5kxC"
  />
</div>
`;

exports[`<Badge /> Should match snapshot with children 1`] = `
.Badge-module__wrapper___Owq-B {
  display: inline-block;
  margin-left: var(--qtm-spacing-xsmall);
  margin-right: var(--qtm-spacing-xsmall);
}

.Badge-module__wrapper-content___CkcNl {
  margin-left: 0;
  margin-right: 0;
  position: relative;
}

.Badge-module__badge___vNFzU {
  align-items: center;
  border-radius: 8px;
  box-sizing: border-box;
  display: flex;
  font-size: calc(var(--qtm-base-font-size)*.75);
  font-weight: 700;
  height: 24px;
  justify-content: center;
  line-height: 24px;
  min-width: 32px;
  padding-left: var(--qtm-spacing-xxxsmall);
  padding-right: var(--qtm-spacing-xxxsmall);
}

.Badge-module__badge-content___TxPZt {
  position: absolute;
  right: -10px;
  top: -10px;
}

.Badge-module__badge-skin-neutral___J8kXp {
  background-color: var(--qtm-colors-neutral-100);
  color: var(--qtm-colors-neutral-700);
}

.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<div
  class="Badge-module__wrapper___Owq-B Badge-module__wrapper-content___CkcNl"
>
  <span
    class="Badge-module__badge___vNFzU Badge-module__badge-skin-neutral___J8kXp Badge-module__badge-content___TxPZt"
  >
    10
  </span>
  <button
    class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5"
    type="button"
  />
</div>
`;

exports[`<Badge /> Should match snapshot with skin 1`] = `
.Badge-module__wrapper___Owq-B {
  display: inline-block;
  margin-left: var(--qtm-spacing-xsmall);
  margin-right: var(--qtm-spacing-xsmall);
}

.Badge-module__badge___vNFzU {
  align-items: center;
  border-radius: 8px;
  box-sizing: border-box;
  display: flex;
  font-size: calc(var(--qtm-base-font-size)*.75);
  font-weight: 700;
  height: 24px;
  justify-content: center;
  line-height: 24px;
  min-width: 32px;
  padding-left: var(--qtm-spacing-xxxsmall);
  padding-right: var(--qtm-spacing-xxxsmall);
}

.Badge-module__badge-skin-success___lADyt {
  background-color: var(--qtm-colors-success-100);
  color: var(--qtm-colors-success-900);
}

<div
  class="Badge-module__wrapper___Owq-B"
>
  <span
    class="Badge-module__badge___vNFzU Badge-module__badge-skin-success___lADyt"
  >
    10
  </span>
</div>
`;

exports[`<Badge /> Should match snapshot with skin inverted 1`] = `
.Badge-module__wrapper___Owq-B {
  display: inline-block;
  margin-left: var(--qtm-spacing-xsmall);
  margin-right: var(--qtm-spacing-xsmall);
}

.Badge-module__badge___vNFzU {
  align-items: center;
  border-radius: 8px;
  box-sizing: border-box;
  display: flex;
  font-size: calc(var(--qtm-base-font-size)*.75);
  font-weight: 700;
  height: 24px;
  justify-content: center;
  line-height: 24px;
  min-width: 32px;
  padding-left: var(--qtm-spacing-xxxsmall);
  padding-right: var(--qtm-spacing-xxxsmall);
}

.Badge-module__badge-skin-neutral___J8kXp {
  background-color: var(--qtm-colors-neutral-100);
  color: var(--qtm-colors-neutral-700);
}

.Badge-module__badge-skin-neutral-inverted___RrIBf {
  background-color: var(--qtm-colors-neutral-700);
  color: var(--qtm-colors-neutral-100);
}

<div
  class="Badge-module__wrapper___Owq-B"
>
  <span
    class="Badge-module__badge___vNFzU Badge-module__badge-skin-neutral___J8kXp Badge-module__badge-skin-neutral-inverted___RrIBf"
  >
    10
  </span>
</div>
`;
